# PNGToSVG

./: .gitignore  Cargo.toml  LICENSE  README.md  Release_instructions.md  build.rs  createExecutable.py  pngtosvg.py
.github/workflows/: ci.yml  release.yml
benches/: performance.rs
legacy_python/: README.md  requirements.txt
rust/: Cargo.toml
rust/src/: main.rs
src/: lib.rs  main.rs
tests/: README.md  compare_before_and_after.rs  golden_master.rs  rasterize_roundtrip.rs
